fixed responsiveness of Edit Recipe form on iPhone view

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -141,6 +141,9 @@ img.bg {
      height:100%;
      margin-left:10%;
      margin-right:10%;
+     textarea{
+       width: 100%;
+     }
  }
 
 
@@ -245,7 +248,9 @@ select {
          margin-left:0;
          margin-right:0;
      }
-
+    //  textarea{
+    //    width: 100%;
+    //  }
     #hidden {
         display:none;
     }
